--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Hello World!</h1>
-        <p>hey motherfuckeeeerrrrs</p>
+        <p>hey!</p>
     </body>
 </html>
